--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ documentation = "https://vadixidav.github.io/scell/scell/"
 repository = "https://github.com/vadixidav/scell/"
 license = "BSD-2-Clause"
 
+[dependencies]
+atomic_refcell = "0.1.8"
+
 [features]
 default = []
 unchecked = []
